--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ __pycache__/
 
 data_cleaning/train_dataset.jsonl
 data_cleaning/train_dataset_with_features.jsonl
+classical_models_trainning/env/
+classical_models_training/env
